theme: fix header/content layout issue
Most visible on the front page, and using Firefox + IE. The frontpage
top photo covers the bottom of the navbar with the search and other
fields making them barely usable / unusable.

--- a/wp-content/themes/viaembedded/style.css
+++ b/wp-content/themes/viaembedded/style.css
@@ -74,6 +74,11 @@ and Blueprint http://www.blueprintcss.org/
 	padding: 1em 0;
 }
 
+.clearfix {
+    display: inline-block;
+    width: 100%;
+}
+
 * { /* keep all site elements their true width. Ex. padding gets subtracted from width */
 	-webkit-box-sizing: border-box;
 	-moz-box-sizing: border-box;
@@ -1370,6 +1375,10 @@ table#frontpaget1 {
     display: block;
     position: relative;
     z-index: 10;
+}
+
+header#masthead {
+    padding: 0.5em 0 0 0;
 }
 
 @media screen and (min-width: 768px) {
